{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 14,
  "lineage": "905f8046-1ff3-bca6-d093-576d3649c43e",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "bastion_static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.56.152.64",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-07-02T00:58:44.817-07:00",
            "id": "projects/class-schedule-461819/regions/us-central1/addresses/bastion-static-ip",
            "name": "bastion-static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "class-schedule-461819",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/regions/us-central1/addresses/bastion-static-ip"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-2404-noble-amd64-v20250701",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/zones/us-central1-a/disks/backend-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/class-schedule-461819/zones/us-central1-a/instances/backend-instance",
            "instance_id": "2909766100277301",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "ig:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDbMVtXUR26V29Qt7Vv/E9lkJEvCbAPcn0nLSDj4PZWOoHeHU5hdW4mmgPhXvKpWSxYcAGs0Tj2iA/twwgQ/6AM1UiG3ybUDJWGgZlYCjA+7UxKFmQbcC9Jpy2QbEN/8MMjoMjOEoVi087T4s3WYLyUrh2KB267FYt7DHyy5VPiSvlWyf4h6Opq+Bcb/75dkJpNgus013OF72rH0SuyI5bF3VBu0WMYv6pXz3N7qXwE3yLpAIfu+zCATEMXs6JqO9y4BGbL2o9wnRWUUsp3WpY14GffCfstxUxoXoPmhT0z9+vPzkpHkadq2d8mozRm1YHO6FsXJs6YlYSQ3qA8PxUATn0NqVdPDrdYCN+4XfLo/fHrLaqhzNN/8Lr3Ap65UL5ZpscMGlOzw6qQtaXoBXPoxaz/62qaV6fC5s13RtdPv3l+Aq [...]
            },
            "metadata_fingerprint": "F1k661ArtnU=",
            "name": "backend-instance",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/global/networks/schedule-app-vpc",
                "network_ip": "10.0.2.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/regions/us-central1/subnetworks/private-subnet",
                "subnetwork_project": "class-schedule-461819"
              }
            ],
            "project": "class-schedule-461819",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/zones/us-central1-a/instances/backend-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-2404-noble-amd64-v20250701",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/zones/us-central1-a/disks/bastion-host"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/class-schedule-461819/zones/us-central1-a/instances/bastion-host",
            "instance_id": "5065369717687539765",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "ig:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDbMVtXUR26V29Qt7Vv/E9lkJEvCbAPcn0nLSDj4PZWOoHeHU5hdW4mmgPhXvKpWSxYcAGs0Tj2iA/twwgQ/6AM1UiG3ybUDJWGgZlYCjA+7UxKFmQbcC9Jpy2QbEN/8MMjoMjOEoVi087T4s3WYLyUrh2KB267FYt7DHyy5VPiSvlWyf4h6Opq+Bcb/75dkJpNgus013OF72rH0SuyI5bF3VBu0WMYv6pXz3N7qXwE3yLpAIfu+zCATEMXs6JqO9y4BGbL2o9wnRWUUsp3WpY14GffCfstxUxoXoPmhT0z9+vPzkpHkadq2d8mozRm1YHO6FsXJs6YlYSQ3qA8PxUATn0NqVdPDrdYCN+4XfLo/fHrLaqhzNN/8Lr3Ap65UL5ZpscMGlOzw6qQtaXoBXPoxaz/62qaV6fC5s13RtdPv3l+Aq [...]
            },
            "metadata_fingerprint": "F1k661ArtnU=",
            "name": "bastion-host",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.56.152.64",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/global/networks/schedule-app-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/regions/us-central1/subnetworks/public-subnet",
                "subnetwork_project": "class-schedule-461819"
              }
            ],
            "project": "class-schedule-461819",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/zones/us-central1-a/instances/bastion-host",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastion"
            ],
            "tags_fingerprint": "NfTTNVh6sLU=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.google_compute_address.bastion_static_ip",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-2404-noble-amd64-v20250701",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/zones/us-central1-a/disks/database-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/class-schedule-461819/zones/us-central1-a/instances/database-instance",
            "instance_id": "1850911692511860789",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "ig:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDbMVtXUR26V29Qt7Vv/E9lkJEvCbAPcn0nLSDj4PZWOoHeHU5hdW4mmgPhXvKpWSxYcAGs0Tj2iA/twwgQ/6AM1UiG3ybUDJWGgZlYCjA+7UxKFmQbcC9Jpy2QbEN/8MMjoMjOEoVi087T4s3WYLyUrh2KB267FYt7DHyy5VPiSvlWyf4h6Opq+Bcb/75dkJpNgus013OF72rH0SuyI5bF3VBu0WMYv6pXz3N7qXwE3yLpAIfu+zCATEMXs6JqO9y4BGbL2o9wnRWUUsp3WpY14GffCfstxUxoXoPmhT0z9+vPzkpHkadq2d8mozRm1YHO6FsXJs6YlYSQ3qA8PxUATn0NqVdPDrdYCN+4XfLo/fHrLaqhzNN/8Lr3Ap65UL5ZpscMGlOzw6qQtaXoBXPoxaz/62qaV6fC5s13RtdPv3l+Aq [...]
            },
            "metadata_fingerprint": "F1k661ArtnU=",
            "name": "database-instance",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/global/networks/schedule-app-vpc",
                "network_ip": "10.0.2.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/regions/us-central1/subnetworks/private-subnet",
                "subnetwork_project": "class-schedule-461819"
              }
            ],
            "project": "class-schedule-461819",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/zones/us-central1-a/instances/database-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-2404-noble-amd64-v20250701",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/zones/us-central1-a/disks/frontend-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/class-schedule-461819/zones/us-central1-a/instances/frontend-instance",
            "instance_id": "5369356056810575926",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "ig:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDbMVtXUR26V29Qt7Vv/E9lkJEvCbAPcn0nLSDj4PZWOoHeHU5hdW4mmgPhXvKpWSxYcAGs0Tj2iA/twwgQ/6AM1UiG3ybUDJWGgZlYCjA+7UxKFmQbcC9Jpy2QbEN/8MMjoMjOEoVi087T4s3WYLyUrh2KB267FYt7DHyy5VPiSvlWyf4h6Opq+Bcb/75dkJpNgus013OF72rH0SuyI5bF3VBu0WMYv6pXz3N7qXwE3yLpAIfu+zCATEMXs6JqO9y4BGbL2o9wnRWUUsp3WpY14GffCfstxUxoXoPmhT0z9+vPzkpHkadq2d8mozRm1YHO6FsXJs6YlYSQ3qA8PxUATn0NqVdPDrdYCN+4XfLo/fHrLaqhzNN/8Lr3Ap65UL5ZpscMGlOzw6qQtaXoBXPoxaz/62qaV6fC5s13RtdPv3l+Aq [...]
            },
            "metadata_fingerprint": "F1k661ArtnU=",
            "name": "frontend-instance",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/global/networks/schedule-app-vpc",
                "network_ip": "10.0.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/regions/us-central1/subnetworks/private-subnet",
                "subnetwork_project": "class-schedule-461819"
              }
            ],
            "project": "class-schedule-461819",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/zones/us-central1-a/instances/frontend-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-2404-noble-amd64-v20250701",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/zones/us-central1-a/disks/monitoring-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/class-schedule-461819/zones/us-central1-a/instances/monitoring-instance",
            "instance_id": "5424544814606145589",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "ig:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDbMVtXUR26V29Qt7Vv/E9lkJEvCbAPcn0nLSDj4PZWOoHeHU5hdW4mmgPhXvKpWSxYcAGs0Tj2iA/twwgQ/6AM1UiG3ybUDJWGgZlYCjA+7UxKFmQbcC9Jpy2QbEN/8MMjoMjOEoVi087T4s3WYLyUrh2KB267FYt7DHyy5VPiSvlWyf4h6Opq+Bcb/75dkJpNgus013OF72rH0SuyI5bF3VBu0WMYv6pXz3N7qXwE3yLpAIfu+zCATEMXs6JqO9y4BGbL2o9wnRWUUsp3WpY14GffCfstxUxoXoPmhT0z9+vPzkpHkadq2d8mozRm1YHO6FsXJs6YlYSQ3qA8PxUATn0NqVdPDrdYCN+4XfLo/fHrLaqhzNN/8Lr3Ap65UL5ZpscMGlOzw6qQtaXoBXPoxaz/62qaV6fC5s13RtdPv3l+Aq [...]
            },
            "metadata_fingerprint": "F1k661ArtnU=",
            "name": "monitoring-instance",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/global/networks/schedule-app-vpc",
                "network_ip": "10.0.2.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/regions/us-central1/subnetworks/private-subnet",
                "subnetwork_project": "class-schedule-461819"
              }
            ],
            "project": "class-schedule-461819",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/zones/us-central1-a/instances/monitoring-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/class-schedule-461819/global/networks/schedule-app-vpc",
            "mtu": 0,
            "name": "schedule-app-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "class-schedule-461819",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/global/networks/schedule-app-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-02T00:59:06.983-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/class-schedule-461819/regions/us-central1/routers/schedule-app-router",
            "name": "schedule-app-router",
            "network": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/global/networks/schedule-app-vpc",
            "project": "class-schedule-461819",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/regions/us-central1/routers/schedule-app-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "class-schedule-461819/us-central1/schedule-app-router/schedule-app-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "schedule-app-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "class-schedule-461819",
            "region": "us-central1",
            "router": "schedule-app-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_router.router"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-02T00:59:06.721-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/class-schedule-461819/regions/us-central1/subnetworks/private-subnet",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/global/networks/schedule-app-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "class-schedule-461819",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/regions/us-central1/subnetworks/private-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-02T00:59:07.217-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/class-schedule-461819/regions/us-central1/subnetworks/public-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/global/networks/schedule-app-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "class-schedule-461819",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/regions/us-central1/subnetworks/public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-07-02T00:59:19.835-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/class-schedule-461819/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/global/networks/schedule-app-vpc",
            "priority": 1000,
            "project": "class-schedule-461819",
            "self_link": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/global/firewalls/allow-internal",
            "source_ranges": [
              "10.0.1.0/24",
              "10.0.2.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_subnetwork.private_subnet",
            "module.network.google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_to_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-02T00:59:06.741-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/class-schedule-461819/global/firewalls/allow-ssh-to-bastion",
            "log_config": [],
            "name": "allow-ssh-to-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/global/networks/schedule-app-vpc",
            "priority": 1000,
            "project": "class-schedule-461819",
            "self_link": "https://www.googleapis.com/compute/v1/projects/class-schedule-461819/global/firewalls/allow-ssh-to-bastion",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "bastion"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}